--- a/index.html
+++ b/index.html
@@ -16,7 +16,24 @@
 </head>
 
 <body>
-
+        <!--Navigation Bar-->
+    <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand mr-auto" href="#">Resturant Fusion</a>
+                <div class="collapse navbar-collapse" id="Navbar"> 
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="aboutus.html">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                    </ul>
+                </div>  
+        </div>
+    </nav>
+            <!--Header-->
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -29,7 +46,7 @@
             </div>
         </div>
     </header>
-
+                <!--Main Container-->
     <div class="container">
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 order-sm-last col-md-3">
@@ -40,7 +57,6 @@
                 <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
             </div>
         </div>
-
 
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 col-md-3">
@@ -63,7 +79,7 @@
             </div>
         </div>
     </div>
-
+            <!--Footer-->
     <footer class="footer">
         <div class="container">
             <div class="row">             
@@ -71,7 +87,7 @@
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="./aboutus.html">About</a></li>
                         <li><a href="#">Menu</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
