added tables & cards to about us page

--- a/contactus.html
+++ b/contactus.html
@@ -92,6 +92,7 @@
               <h3>Send us your Feedback</h3>
            </div>
             <div class="col-12 col-md-9">
+                                <!-- Form starts here -->
                 <form>
                                             <!-- first name -->
                     <div class="form-group row">           
