added Tabs to the aboutus page

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-sm align-self-center">
+                <div class="col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
                 </div>
-                <div class="col-sm align-self-center">
+                <div class="col-sm-3 align-self-center">
                     <a class="btn btn-warning btn-block btn-sm" href="#reservetable" role="button">Reserve a Table</a>
                     <!-- <a href="#reservation" type="button" class="btn btn-sm btn-warning">Reserve table</a> -->
                 </div>
@@ -89,7 +89,7 @@
                             Free flowing bubbly and soft drinks. All for just $19.99 per person 
                         </p>
                 </div>
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" 
+                    <img class="d-flex ml-3 img-thumbnail align-self-center" 
                         src="img/buffet.png" alt="buffet">
             </div>
         </div>
