--- a/index.html
+++ b/index.html
@@ -79,67 +79,69 @@
     </div>
 </div>
 
+<!-- modal for reserving a table -->
+<div id="reservetableModal" class="modal fade" role="dialog">
+    <div class="modal-dialog" role="content">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Reserve a Table</h3>
+                <button type="button" class="close" data-dismiss="modal">
+                    &times;
+                </button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group row">
+                        <label class="col-md-3 col-form-label">Number of Guests</label>
+                        <div class="col-md-9 align-self-center btn-group">
+                            <label class="radio-inline mr-2 ml-2"><input type="radio" name="noOfGuests" value=1> 1</label>
+                            <label class="radio-inline mr-2 ml-2"><input type="radio" name="noOfGuests" value=2> 2</label>
+                            <label class="radio-inline mr-2 ml-2"><input type="radio" name="noOfGuests" value=3> 3</label>
+                            <label class="radio-inline mr-2 ml-2"><input type="radio" name="noOfGuests" value=4> 4</label>
+                            <label class="radio-inline mr-2 ml-2"><input type="radio" name="noOfGuests" value=5> 5</label>
+                            <label class="radio-inline mr-2 ml-2"><input type="radio" name="noOfGuests" value=6> 6</label>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-md-3 col-form-label align-self-center">Section</label>
+                        <div class="col-md-9 align-self-center btn-group" data-toggle="buttons">
+                            <label class="btn btn-success active radio-inline btn-sm"><input type="radio" name="section" value=1 checked> Non-Smoking</label>
+                            <label class="btn btn-danger radio-inline btn-sm"><input type="radio" name="section" value=2> Smoking</label>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-md-3 col-form-label">Date and Time</label>
+                        <div class="col-md-4 align-self-center">
+                            <div class="input-group">
+                                <span class="input-group-addon fa fa-calendar"></span><input type="text" class="form-control" id="date" name="date"
+                                    placeholder="Date"/>
+                            </div>
+                        </div>
+                        <div class="col-md-4 align-self-center">
+                            <div class="input-group">
+                                <span class="input-group-addon fa fa-clock-o"></span><input type="text" class="form-control" id="time" name="time"
+                                    placeholder="Time"/>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="offset-md-3 col-md-9">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary">Reserve</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+            </div>
+        </div>
+    </div>
+</div>
 
 
             <!--Header-->
     <header class="jumbotron">
         <div class="container">
-            <!-- Carousel starts here -->
-            <div class="row row-content">
-                <div class="col">
-                    <div id="mycarousel" class="carousel slide" data-ride="carousel">
-                        <div class="carousel-innner" role="listbox">
-                            <div class="carousel-item active">
-                                <img class="d-block img-fluid"
-                                    src="img/uthappizza.png" alt="uthappizza">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h2>Uthappizza <span class="badge badge-danger">HOT</span> 
-                                        <span class="badge badge-pill badge-secondary">$4.99</span> </h2>
-                                        <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, 
-                                            topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, 
-                                            Guntur chillies and Buffalo Paneer.
-                                        </p>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block img-fluid"
-                                    src="img/buffet.png" alt="buffet">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span> </h2>
-                                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads,
-                                            six enticing appetizers, six main entrees and five choicest desserts. 
-                                            Free flowing bubbly and soft drinks. All for just $19.99 per person 
-                                        </p>
-                                </div>     
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block img-fluid"
-                                    src="img/alberto.png" alt="alberto">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h2>Alberto Somayya</h2>
-                                    <h4>Executive Chef</h4>
-                                        <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide 
-                                            International experience having worked closely with whos-who in the culinary world, 
-                                            he specializes in creating mouthwatering Indo-Italian fusion experiences. 
-                                        </p>
-                                </div>    
-                            </div>
-                        </div>
-                        <ol class="carousel-indicators">
-                            <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
-                            <li data-target="#mycarousel" data-slide-to="1"></li>
-                            <li data-target="#mycarousel" data-slide-to="2"></li>
-                        </ol>
-                        <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon"></span>
-                        </a>
-                        <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon"></span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <!-- Carousel Ends here -->
                 <!-- Header Starts here -->
             <div class="row row-header">
                 <div class="col-12 col-sm-6">
@@ -151,9 +153,7 @@
                 </div>
                 <div class="col12 col-sm align-self-center">
                     <a class="btn btn-warning btn-block btn-sm" 
-                        data-toggle="tooltip" data-html="true" 
-                        title="Or Call us at <br><strong>+852 12345678</strong>"
-                        data-placement="bottom"
+                        data-toggle="modal" data-target="#reservetableModal"
                         href="#reservetable" role="button">Reserve a Table</a>
                     <!-- <a href="#reservation" type="button" class="btn btn-sm btn-warning">Reserve table</a> -->
                 </div>
@@ -163,6 +163,62 @@
 
                 <!--Main Container-->
 <div class="container">
+                <!-- Carousel starts here -->
+                <div class="row row-content">
+                    <div class="col">
+                        <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                            <div class="carousel-innner" role="listbox">
+                                <div class="carousel-item active">
+                                    <img class="d-block img-fluid"
+                                        src="img/uthappizza.png" alt="uthappizza">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h2>Uthappizza <span class="badge badge-danger">HOT</span> 
+                                            <span class="badge badge-pill badge-secondary">$4.99</span> </h2>
+                                            <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, 
+                                                topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, 
+                                                Guntur chillies and Buffalo Paneer.
+                                            </p>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block img-fluid"
+                                        src="img/buffet.png" alt="buffet">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span> </h2>
+                                            <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads,
+                                                six enticing appetizers, six main entrees and five choicest desserts. 
+                                                Free flowing bubbly and soft drinks. All for just $19.99 per person 
+                                            </p>
+                                    </div>     
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block img-fluid"
+                                        src="img/alberto.png" alt="alberto">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h2>Alberto Somayya</h2>
+                                        <h4>Executive Chef</h4>
+                                            <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide 
+                                                International experience having worked closely with whos-who in the culinary world, 
+                                                he specializes in creating mouthwatering Indo-Italian fusion experiences. 
+                                            </p>
+                                    </div>    
+                                </div>
+                            </div>
+                            <ol class="carousel-indicators">
+                                <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                                <li data-target="#mycarousel" data-slide-to="1"></li>
+                                <li data-target="#mycarousel" data-slide-to="2"></li>
+                            </ol>
+                            <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon"></span>
+                            </a>
+                            <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon"></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Carousel Ends here -->
     <div class="row row-content align-items-center">
         <div class="col-12 col-sm-4 order-sm-last col-md-3">
             <h3>Our Lipsmacking Culinary Creations</h3>
@@ -222,7 +278,7 @@
         </div>
     </div>
                         <!-- Week 2 Assignment -->
-    <div class="row row-content justify-content-center"  id="reservetable">
+    <!-- <div class="row row-content justify-content-center"  id="reservetable">
         <div class="col-12 col-sm-8">
             <div class="card">
                 <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
@@ -271,7 +327,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 </div>
 
             <!--Footer-->
@@ -321,11 +377,11 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
+    <!-- <script>
         $(document).ready(function() {
             $('[data-toggle="tooltip"]').tooltip();
         });
-    </script>
+    </script> -->
 </body>
 
 </html>
