--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div class="modal-body">
                 <!-- Form for Modal- starts here -->
-                <form>
+                <form class="form-inline">
                     <div class="form-row">
                         <div class="form-group col-sm-4">
                                 <label class="sr-only" for="exampleInputEmail3">Email address</label>
@@ -92,7 +92,7 @@
             <div class="modal-body">
                 <form>
                     <div class="form-group row">
-                        <label class="col-md-3 col-form-label">Number of Guests</label>
+                        <label for="firstname" class="col-md-3 col-form-label">Number of Guests</label>
                         <div class="col-md-9 align-self-center btn-group">
                             <label class="radio-inline mr-2 ml-2"><input type="radio" name="noOfGuests" value=1> 1</label>
                             <label class="radio-inline mr-2 ml-2"><input type="radio" name="noOfGuests" value=2> 2</label>
@@ -103,7 +103,7 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label class="col-md-3 col-form-label align-self-center">Section</label>
+                        <label for="section" class="col-md-3 col-form-label align-self-center">Section</label>
                         <div class="col-md-9 align-self-center btn-group" data-toggle="buttons">
                             <label class="btn btn-success active radio-inline btn-sm"><input type="radio" name="section" value=1 checked> Non-Smoking</label>
                             <label class="btn btn-danger radio-inline btn-sm"><input type="radio" name="section" value=2> Smoking</label>
